[package]
name = "cborpath"
version = "0.1.0"
keywords = ["cbor", "cborpath"]
categories = ["parser-implementations", "parsing"]
description = "CborPath engine written in Rust"
homepage = "https://github.com/dahomey-technologies/cborpath-rs"
repository = "https://github.com/dahomey-technologies/cborpath-rs"
documentation = "https://docs.rs/cborpath"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2"
regex = "1.7"
serde = "1.0"
